// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in Arabic 1`] = `
<div>
  <div
    class="space-y-4"
    dir="rtl"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-foreground"
        >
          title
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-border px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
          data-size="default"
          data-slot="button"
          data-testid="print-all-labels-btn"
          data-variant="default"
          type="button"
        >
          printAllLabels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-2xl border-2 border-border p-4"
        data-testid="medication-label"
        dir="rtl"
      >
        <h3
          class="text-xl font-bold text-foreground"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-muted-foreground"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-foreground"
          data-testid="label-dosage"
        >
          1
           
          capsule
        </p>
        <div
          aria-label="dosageTiming"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="صباح"
              class="lucide lucide-sun h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="4"
              />
              <path
                d="M12 2v2"
              />
              <path
                d="M12 20v2"
              />
              <path
                d="m4.93 4.93 1.41 1.41"
              />
              <path
                d="m17.66 17.66 1.41 1.41"
              />
              <path
                d="M2 12h2"
              />
              <path
                d="M20 12h2"
              />
              <path
                d="m6.34 17.66-1.41 1.41"
              />
              <path
                d="m19.07 4.93-1.41 1.41"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              صباح
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="ظهر"
              class="lucide lucide-utensils h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              ظهر
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="مساء"
              class="lucide lucide-moon h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              مساء
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-foreground"
          data-testid="label-duration"
        >
          days {"count":7}
        </p>
        <p
          class="mt-1 text-xs text-muted-foreground"
          data-testid="label-batch"
        >
          lot {"lot":"LOT-2026-04A"}
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in Dari 1`] = `
<div>
  <div
    class="space-y-4"
    dir="rtl"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-foreground"
        >
          title
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-border px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
          data-size="default"
          data-slot="button"
          data-testid="print-all-labels-btn"
          data-variant="default"
          type="button"
        >
          printAllLabels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-2xl border-2 border-border p-4"
        data-testid="medication-label"
        dir="rtl"
      >
        <h3
          class="text-xl font-bold text-foreground"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-muted-foreground"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-foreground"
          data-testid="label-dosage"
        >
          1
           
          capsule
        </p>
        <div
          aria-label="dosageTiming"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="صبح"
              class="lucide lucide-sun h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="4"
              />
              <path
                d="M12 2v2"
              />
              <path
                d="M12 20v2"
              />
              <path
                d="m4.93 4.93 1.41 1.41"
              />
              <path
                d="m17.66 17.66 1.41 1.41"
              />
              <path
                d="M2 12h2"
              />
              <path
                d="M20 12h2"
              />
              <path
                d="m6.34 17.66-1.41 1.41"
              />
              <path
                d="m19.07 4.93-1.41 1.41"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              صبح
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="ظهر"
              class="lucide lucide-utensils h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              ظهر
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="شب"
              class="lucide lucide-moon h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              شب
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-foreground"
          data-testid="label-duration"
        >
          days {"count":7}
        </p>
        <p
          class="mt-1 text-xs text-muted-foreground"
          data-testid="label-batch"
        >
          lot {"lot":"LOT-2026-04A"}
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in English 1`] = `
<div>
  <div
    class="space-y-4"
    dir="ltr"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-foreground"
        >
          title
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-border px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
          data-size="default"
          data-slot="button"
          data-testid="print-all-labels-btn"
          data-variant="default"
          type="button"
        >
          printAllLabels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-2xl border-2 border-border p-4"
        data-testid="medication-label"
        dir="ltr"
      >
        <h3
          class="text-xl font-bold text-foreground"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-muted-foreground"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-foreground"
          data-testid="label-dosage"
        >
          1
           
          capsule
        </p>
        <div
          aria-label="dosageTiming"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Morning"
              class="lucide lucide-sun h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="4"
              />
              <path
                d="M12 2v2"
              />
              <path
                d="M12 20v2"
              />
              <path
                d="m4.93 4.93 1.41 1.41"
              />
              <path
                d="m17.66 17.66 1.41 1.41"
              />
              <path
                d="M2 12h2"
              />
              <path
                d="M20 12h2"
              />
              <path
                d="m6.34 17.66-1.41 1.41"
              />
              <path
                d="m19.07 4.93-1.41 1.41"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              Morning
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Noon"
              class="lucide lucide-utensils h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              Noon
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Night"
              class="lucide lucide-moon h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="none"
              height="24"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
              />
            </svg>
            <span
              class="text-xs font-medium text-muted-foreground"
            >
              Night
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-foreground"
          data-testid="label-duration"
        >
          days {"count":7}
        </p>
        <p
          class="mt-1 text-xs text-muted-foreground"
          data-testid="label-batch"
        >
          lot {"lot":"LOT-2026-04A"}
        </p>
      </div>
    </div>
  </div>
</div>
`;
